--- a/Set_B_03.ipynb
+++ b/Set_B_03.ipynb
@@ -10,7 +10,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['B', 'D', 'G', 'F']\n"
+      "Starting A* from: A to F\n",
+      "Initial heuristic values: {'A': 7, 'B': 6, 'C': 2, 'D': 1, 'E': 3, 'F': 0, 'G': 0}\n",
+      "\n",
+      "Processing node: A\n",
+      "  Checking neighbor: B, Cost: 1, Tentative g_score: 1\n",
+      "  Updated g_score[B] = 1\n",
+      "  Updated f_score[B] = 7\n",
+      "  Added B to open set with priority 7\n",
+      "  Checking neighbor: C, Cost: 4, Tentative g_score: 4\n",
+      "  Updated g_score[C] = 4\n",
+      "  Updated f_score[C] = 6\n",
+      "  Added C to open set with priority 6\n",
+      "Current Open Set: ['C', 'B']\n",
+      "\n",
+      "Processing node: C\n",
+      "  Checking neighbor: A, Cost: 4, Tentative g_score: 8\n",
+      "  Checking neighbor: F, Cost: 3, Tentative g_score: 7\n",
+      "  Updated g_score[F] = 7\n",
+      "  Updated f_score[F] = 7\n",
+      "  Added F to open set with priority 7\n",
+      "Current Open Set: ['B', 'F']\n",
+      "\n",
+      "Processing node: B\n",
+      "  Checking neighbor: A, Cost: 1, Tentative g_score: 2\n",
+      "  Checking neighbor: D, Cost: 2, Tentative g_score: 3\n",
+      "  Updated g_score[D] = 3\n",
+      "  Updated f_score[D] = 4\n",
+      "  Added D to open set with priority 4\n",
+      "  Checking neighbor: E, Cost: 5, Tentative g_score: 6\n",
+      "  Updated g_score[E] = 6\n",
+      "  Updated f_score[E] = 9\n",
+      "  Added E to open set with priority 9\n",
+      "Current Open Set: ['D', 'F', 'E']\n",
+      "\n",
+      "Processing node: D\n",
+      "  Checking neighbor: B, Cost: 2, Tentative g_score: 5\n",
+      "  Checking neighbor: G, Cost: 1, Tentative g_score: 4\n",
+      "  Updated g_score[G] = 4\n",
+      "  Updated f_score[G] = 4\n",
+      "  Added G to open set with priority 4\n",
+      "Current Open Set: ['G', 'E', 'F']\n",
+      "\n",
+      "Processing node: G\n",
+      "  Checking neighbor: D, Cost: 1, Tentative g_score: 5\n",
+      "  Checking neighbor: F, Cost: 2, Tentative g_score: 6\n",
+      "  Updated g_score[F] = 6\n",
+      "  Updated f_score[F] = 6\n",
+      "Current Open Set: ['F', 'E']\n",
+      "\n",
+      "Processing node: F\n",
+      "\n",
+      "Goal reached! Constructing path...\n",
+      "Final path: ['A', 'B', 'D', 'G', 'F']\n",
+      "\n",
+      "Final Shortest Path: ['A', 'B', 'D', 'G', 'F']\n"
      ]
     }
    ],
@@ -21,30 +75,48 @@
     "    open_set = []\n",
     "    heapq.heappush(open_set, (0, start))\n",
     "    came_from = {}\n",
+    "    \n",
     "    g_score = {node: float('inf') for node in graph}\n",
     "    g_score[start] = 0\n",
+    "    \n",
     "    f_score = {node: float('inf') for node in graph}\n",
     "    f_score[start] = heuristic[start]\n",
     "\n",
+    "    print(f\"Starting A* from: {start} to {goal}\")\n",
+    "    print(f\"Initial heuristic values: {heuristic}\\n\")\n",
+    "\n",
     "    while open_set:\n",
     "        current = heapq.heappop(open_set)[1]\n",
-    "\n",
+    "        print(f\"Processing node: {current}\")\n",
+    "        \n",
     "        if current == goal:\n",
+    "            print(\"\\nGoal reached! Constructing path...\")\n",
     "            path = []\n",
     "            while current in came_from:\n",
     "                path.append(current)\n",
     "                current = came_from[current]\n",
+    "            path.append(start)\n",
+    "            print(f\"Final path: {path[::-1]}\\n\")\n",
     "            return path[::-1]\n",
     "\n",
     "        for neighbor, cost in graph[current].items():\n",
     "            tentative_g_score = g_score[current] + cost\n",
+    "            print(f\"  Checking neighbor: {neighbor}, Cost: {cost}, Tentative g_score: {tentative_g_score}\")\n",
+    "\n",
     "            if tentative_g_score < g_score[neighbor]:\n",
     "                came_from[neighbor] = current\n",
     "                g_score[neighbor] = tentative_g_score\n",
     "                f_score[neighbor] = tentative_g_score + heuristic[neighbor]\n",
+    "                print(f\"  Updated g_score[{neighbor}] = {g_score[neighbor]}\")\n",
+    "                print(f\"  Updated f_score[{neighbor}] = {f_score[neighbor]}\")\n",
+    "                \n",
     "                if neighbor not in [i[1] for i in open_set]:\n",
     "                    heapq.heappush(open_set, (f_score[neighbor], neighbor))\n",
+    "                    print(f\"  Added {neighbor} to open set with priority {f_score[neighbor]}\")\n",
     "\n",
+    "        print(f\"Current Open Set: {[node for _, node in open_set]}\\n\")\n",
+    "\n",
+    "    print(\"No path found.\")\n",
     "    return None\n",
     "\n",
     "graph = {\n",
@@ -68,7 +140,7 @@
     "}\n",
     "\n",
     "path = a_star(graph, 'A', 'F', heuristic)\n",
-    "print(path)"
+    "print(\"Final Shortest Path:\", path)\n"
    ]
   },
   {
@@ -82,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -96,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
